--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -99,7 +99,7 @@
   gap: 20px;
 }
 .footerAddress > li > a {
-  color:white;
+  color: white;
   text-decoration: none;
   font-size: 20px;
   &:hover {
@@ -169,6 +169,15 @@
   height: 100%;
   object-fit: cover;
 }
+.unwanted-container > a {
+  /* border: solid blue; */
+  color: var(--neutralColor) !important;
+  font-size: 1px;
+  width: fit-content;
+  position: absolute;
+  right: 0;
+}
+
 @media screen and (min-width: 320px) and (max-width: 768px) {
   .footerWrapper {
     /* border: solid red; */
@@ -205,7 +214,7 @@
   .belowFooter > li:nth-child(1) {
     margin-top: 30px;
   }
-  .footerAddress{
+  .footerAddress {
     /* border: solid red; */
     margin-bottom: 30px;
   }
